--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.add-btn {
+  background-color: #4CAF50;
+  color: white;
+  margin-right: 10px;
+}
+
+.decrease-btn {
+  background-color: #f44336;
+  color: white;
+  margin-left: 10px;
+}
